bakser med danslogik

--- a/Fodbold/ThreeCases.csproj
+++ b/Fodbold/ThreeCases.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dans.cs" />
     <Compile Include="FootballView.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
