--- a/MyLogicClassLibraryDotNetFramework/MyLogicClassLibraryDotNetFramework.csproj
+++ b/MyLogicClassLibraryDotNetFramework/MyLogicClassLibraryDotNetFramework.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DansLogic.cs" />
     <Compile Include="Football.cs" />
+    <Compile Include="PasswordLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
